# CRM_pytorch

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
CRM_pytorch/: __init__.py  crm_pytorch.py
tests/: test_crm_pytorch.py
